@@ -1,5 +1,9 @@
 2016-01-13  Mark Wielaard  <mjw@redhat.com>
 
+	* dwfl-bug-fd-leak.c: Skip test unless on __linux__.
+
+2016-01-13  Mark Wielaard  <mjw@redhat.com>
+
 	* dwfl-proc-attach.c: Guard linux specific header.
 
 2016-01-13  Mark Wielaard  <mjw@redhat.com>
